--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,8 +24,10 @@
 #    and best practices on handling the access key credentials.
 
 on:
-  release:
-    types: [created]
+  # release:
+  #   types: [created]
+  push:
+    branch: [ master ]
 
 name: Deploy to Amazon ECS
 
