--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 numpy = "^1.19.4"
 pandas = "^1.1.4"
 jupyterlab = "^2.2.9"
+streamlit = "^0.70.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
